--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Aluga Boa Viagem - Imóveis de Luxo</title>
   <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" href="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2327ae60'%3e%3cpath d='M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5z'/%3e%3cpath d='M13 7.207V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 1 13.5V7.207l5-5 5 5z'/%3e%3c/svg%3e" type="image/svg+xml">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
@@ -66,29 +67,6 @@
               <span>Sair</span>
             </button>
           </div>
-          <h4 class="user-actions-title">Gerenciar Conta</h4>
-          <!-- Botões para ações do usuário -->
-          <div id="user-actions">
-            <button id="change-name-btn" class="secondary-btn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-              </svg>
-              <span>Alterar Nome</span>
-            </button>
-            <button id="change-password-btn" class="secondary-btn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
-                <path d="M3 8a5 5 0 1 1 9.9 1h.6a1.5 1.5 0 0 1 0 3h-.5v.5a1.5 1.5 0 0 1-3 0V12H8v.5a1.5 1.5 0 0 1-3 0V12H3a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h.1A5.002 5.002 0 0 1 3 8zm5-4a4 4 0 1 0 0 8 4 4 0 0 0 0-8z"/>
-              </svg>
-              <span>Alterar Senha</span>
-            </button>
-            <button id="delete-user-btn" class="danger-btn">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
-                <path d="M2.5 1a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1H15a1 1 0 0 1 0 2h-1v10a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3H1a1 1 0 0 1 0-2h1.5zM5.5 5a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 1 0v-7a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 1 0v-7a.5.5 0 0 0-.5-.5zm3 .5a.5.5 0 0 1 1 0v7a.5.5 0 0 1-1 0v-7z"/>
-              </svg>
-              <span>Excluir Conta</span>
-            </button>
-          </div>
         </div>
       </div>
 
@@ -137,7 +115,7 @@
             </div>
             <div class="input-group">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16"><path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/></svg>
-              <input type="tel" id="contato" placeholder="WhatsApp" required aria-label="Número do WhatsApp para contato" />
+              <input type="tel" id="contato" placeholder="Contato do WhatsApp" required aria-label="Número do WhatsApp para contato" />
             </div>
             <div class="input-group">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-tag-fill" viewBox="0 0 16 16"><path d="M2 1a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l4.586-4.586a1 1 0 0 0 0-1.414l-7-7A1 1 0 0 0 6.586 1H2zm4 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/></svg>
@@ -211,6 +189,39 @@
               </button>
             </div>
           </form>
+        </div>
+      </div>
+
+      <!-- Seção de Gerenciamento de Conta -->
+      <div id="account-management-section" class="hidden">
+        <button id="toggle-account-actions-btn" class="collapsible-btn">
+          <span>Gerenciar Conta</span>
+          <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+          </svg>
+        </button>
+        <div id="account-actions-content" class="collapsible-content hidden">
+          <div id="user-actions">
+            <button id="change-name-btn" class="secondary-btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+              </svg>
+              <span>Alterar Nome</span>
+            </button>
+            <button id="change-password-btn" class="secondary-btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
+                <path d="M3 8a5 5 0 1 1 9.9 1h.6a1.5 1.5 0 0 1 0 3h-.5v.5a1.5 1.5 0 0 1-3 0V12H8v.5a1.5 1.5 0 0 1-3 0V12H3a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h.1A5.002 5.002 0 0 1 3 8zm5-4a4 4 0 1 0 0 8 4 4 0 0 0 0-8z"/>
+              </svg>
+              <span>Alterar Senha</span>
+            </button>
+            <button id="delete-user-btn" class="danger-btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+                <path d="M2.5 1a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1H15a1 1 0 0 1 0 2h-1v10a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3H1a1 1 0 0 1 0-2h1.5zM5.5 5a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 1 0v-7a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 1 0v-7a.5.5 0 0 0-.5-.5zm3 .5a.5.5 0 0 1 1 0v7a.5.5 0 0 1-1 0v-7z"/>
+              </svg>
+              <span>Excluir Conta</span>
+            </button>
+          </div>
         </div>
       </div>
     </aside>
