--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,7 @@
                   <option value="Casa">Casa</option>
                   <option value="Casa de Piscina">Casa de Piscina</option>
                   <option value="Fazenda">Fazenda</option>
+                  <option value="Terreno">Terreno</option>
                   <option value="Ponto Comercial">Ponto Comercial</option>
               </select>
             </div>
