--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
                   <option value="" disabled selected>Tipo de Transação</option>
                   <option value="Vender">Vender</option>
                   <option value="Alugar">Alugar</option>
-                  <option value="Ambos">Vender e Alugar</option>
+                  <option value="Ambos">Vender ou Alugar</option>
               </select>
             </div>
             
