--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,15 @@
               <!-- Opções serão populadas dinamicamente -->
             </select>
           </div>
+          <div class="input-group">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 0 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l-3.146-3.147a.5.5 0 0 1-.708.708l-4 4a.5.5 0 0 1 0 .708l4 4a.5.5 0 0 1 .708-.708L4 13.207V1.5a.5.5 0 0 1 .5-.5z"/></svg>
+            <select id="filter-transaction-type" aria-label="Filtrar por tipo de transação">
+              <option value="">Todas as Transações</option>
+              <option value="Vender">Apenas Venda</option>
+              <option value="Alugar">Apenas Aluguel</option>
+              <option value="Ambos">Venda ou Aluguel</option>
+            </select>
+          </div>
         </div>
       </div>
 
@@ -187,14 +196,23 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map-fill" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8l3-4z"/><path fill-rule="evenodd" d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/></svg>
               <select id="neighborhood" required aria-label="Bairro do imóvel">
                   <option value="" disabled selected>Selecione o Bairro</option>
+                  <option value="Alto da Queiroz">Alto da Queiroz</option>
+                  <option value="Alto do Motor">Alto do Motor</option>
+                  <option value="Bairro de Fátima">Bairro de Fátima</option>
+                  <option value="Boaviaginha">Boaviaginha</option>
                   <option value="Centro">Centro</option>
-                  <option value="Planalto Universitário">Planalto Universitário</option>
-                  <option value="Cidade Alta">Cidade Alta</option>
-                  <option.value="Várzea Alegre">Várzea Alegre</option>
-                  <option value="Uruquê">Uruquê</option>
-                  <option value="Juremal">Juremal</option>
+                  <option value="COHAB">COHAB</option>
+                  <option value="Floresta">Floresta</option>
+                  <option value="José Rosa">José Rosa</option>
+                  <option value="Oséas Facundo">Oséas Facundo</option>
+                  <option value="Ponte Nova">Ponte Nova</option>
+                  <option value="Recreio">Recreio</option>
+                  <option value="Tibiquari">Tibiquari</option>
+                  <option value="Várzea do Canto">Várzea do Canto</option>
+                  <option value="Vila Azul">Vila Azul</option>
+                  <option value="Vila Holanda">Vila Holanda</option>
+                  <option value="Vila São Vicente">Vila São Vicente</option>
                   <option value="Outro">Outro</option>
-                  <!-- Adicione outros bairros conforme necessário -->
               </select>
             </div>
 
