--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,19 @@
             </select>
           </label>
         </div>
+        <div id="filter-instructions">
+          <p>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lightbulb" viewBox="0 0 16 16" style="vertical-align: middle; margin-right: 4px;">
+              <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13a.5.5 0 0 1 0 1 .5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1 0-1 .5.5 0 0 1 0-1 .5.5 0 0 1-.46-.302l-.762-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm6-5a5 5 0 0 0-3.479 8.592c.263.254.514.564.676.941L5.83 12h4.342l.632-1.467c.162-.377.413-.687.676-.941A5 5 0 0 0 8 1z"/>
+            </svg>
+            <strong>Dicas de Busca:</strong>
+          </p>
+          <ul>
+            <li>Use a barra de busca para procurar por nome, descrição ou proprietário.</li>
+            <li>Utilize os menus para filtrar por tipo, bairro ou transação.</li>
+            <li>Você pode combinar a busca com os filtros para refinar os resultados.</li>
+          </ul>
+        </div>
       </div>
 
       <!-- Painel do Usuário (mostra login/registro ou info do usuário) -->
