--- a/public/index.html
+++ b/public/index.html
@@ -240,10 +240,9 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-left-dots-fill" viewBox="0 0 16 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4.414a1 1 0 0 0-.707.293L.854 15.146A.5.5 0 0 1 0 14.793V2zm5 4a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/></svg>
               <select id="contactMethod" required aria-label="Método de contato preferido">
                   <option value="" disabled selected>Método de Contato</option>
-                  <option value="whatsapp">Apenas WhatsApp</option>
+                  <option value="whatsapp">Apenas WhatsApp</option> <!-- O telefone será exibido junto -->
                   <option value="email">Apenas E-mail</option>
-                  <option value="phone">Apenas Telefone</option>
-                  <option value="all">Todos</option>
+                  <option value="all">WhatsApp e E-mail</option>
               </select>
             </label>
             <div id="price-fields-container" class="hidden">
