--- a/public/index.html
+++ b/public/index.html
@@ -81,9 +81,9 @@
             <button id="toggle-register-btn" class="toggle-btn">Registrar</button>
           </div>
           <form id="login-form" class="auth-form">
-            <label class="input-group" for="login-username">
+            <label class="input-group" for="login-identifier">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16"><path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/></svg>
-              <input type="text" id="login-username" placeholder="Usuário" required aria-label="Nome de usuário para login">
+              <input type="text" id="login-identifier" name="login-identifier" placeholder="Usuário, e-mail ou telefone" required aria-label="Nome de usuário, e-mail ou telefone para login">
             </label>
             <div class="input-group">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock" viewBox="0 0 16 16"><path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2zM5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1z"/></svg>
